<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        >
    <item
            android:id="@+id/menu_set_theme_wordtype"
            android:title="@string/menu_caption_theme_wordtype"
            />
    <item
            android:id="@+id/menu_set_block_sort"
            android:title="@string/menu_caption_detail_selections"
            />
    <item
            android:id="@+id/menu_clear_selects"
            android:title="@string/menu_caption_reset_selects"
            />
    <item
            android:id="@+id/action_import"
            android:title="@string/menu_caption_import_database"
            />
    <item
            android:id="@+id/menu_speech"
            android:checkable="true"
            android:title="@string/menu_caption_use_speech"
            />
    <item
            android:id="@+id/menu_about"
            android:title="@string/menu_caption_about"
            />
</menu>
