<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        >

    <item
            android:id="@+id/menu_game_speech"
            android:title="@string/menu_caption_use_speech"
            android:checkable="true"
            />
    <item
            android:id="@+id/menu_reset_hiscore"
            android:title="@string/menu_caption_reset_hiscore"
            />
    <item
            android:id="@+id/menu_mail_lemma"
            android:title="@string/menu_caption_email"
            />
    <item
            android:id="@+id/menu_wordreference"
            android:title="@string/menu_caption_wordreference"
            />
    <item
            android:id="@+id/menu_neurolingo"
            android:title="@string/menu_caption_neurolingo"
            />
</menu>