<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".FilterAndSort"
        tools:ignore="Autofill"
        >
    <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_flashed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:tag="random"
            android:text="@string/lbl_flashed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2"
            />
    <TextView
            android:id="@+id/lbl_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginBottom="0dp"
            android:background="@color/label_bgcolor"
            android:paddingStart="3dp"
            android:paddingEnd="3dp"
            android:text="@string/lbl_level"
            android:textColor="@color/border_color"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
    <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_level1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/lbl_basis"
            app:layout_constraintTop_toBottomOf="@+id/lbl_level"
            app:layout_constraintStart_toStartOf="parent"
            />
    <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_level2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/lbl_advanced"
            app:layout_constraintTop_toBottomOf="@+id/lbl_level"
            app:layout_constraintStart_toEndOf="@+id/sw_level1"
            app:layout_constraintEnd_toStartOf="@+id/sw_level3"
            />
    <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_level3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/lbl_nice2know"
            app:layout_constraintTop_toBottomOf="@+id/lbl_level"
            app:layout_constraintEnd_toEndOf="parent"
            />
    <View
            android:id="@+id/divider01"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="16dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintTop_toBottomOf="@+id/sw_level1"
            app:layout_constraintStart_toStartOf="parent"
            />
    <TextView
            android:id="@+id/lbl_lemmalength_pre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@color/label_bgcolor"
            android:labelFor="@id/text_length"
            android:paddingStart="3dp"
            android:paddingEnd="3dp"
            android:text="@string/lbl_lemmalength_pre"
            android:textColor="@color/border_color"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/divider01"
            app:layout_constraintStart_toStartOf="parent"
            />
    <EditText
            android:id="@+id/text_length"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/background_with_border"
            android:gravity="center_horizontal"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/divider01"
            app:layout_constraintStart_toEndOf="@+id/lbl_lemmalength_pre"
            />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/label_bgcolor"
            android:paddingStart="3dp"
            android:paddingEnd="3dp"
            android:text="@string/lbl_lemmalength_post"
            android:textColor="@color/border_color"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/text_length"
            app:layout_constraintTop_toBottomOf="@+id/divider01"
            />
    <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_use_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/lbl_on_off"
            app:layout_constraintTop_toTopOf="@+id/divider01"
            app:layout_constraintEnd_toEndOf="parent"
            />
    <View
            android:id="@+id/divider02"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="16dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintTop_toBottomOf="@+id/sw_use_length"
            app:layout_constraintStart_toStartOf="parent"
            />
    <TextView
            android:id="@+id/lbl_initaal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@color/label_bgcolor"
            android:paddingStart="3dp"
            android:paddingEnd="3dp"
            android:text="@string/lbl_initiaal"
            android:textColor="@color/border_color"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/divider02"
            app:layout_constraintStart_toStartOf="parent"
            />
    <HorizontalScrollView
            android:id="@+id/key_scroller"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/lbl_initaal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >
        <include layout="@layout/greek_alphabet" />
    </HorizontalScrollView>

    <TextView
            android:id="@+id/tv_initial"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/key_scroller"
            app:layout_constraintEnd_toStartOf="@+id/sw_initial"
            />
    <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_initial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/lbl_on_off"
            app:layout_constraintTop_toBottomOf="@+id/key_scroller"
            app:layout_constraintEnd_toEndOf="parent"
            />
    <View
            android:id="@+id/divider03"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintTop_toBottomOf="@+id/sw_initial"
            app:layout_constraintStart_toStartOf="parent"
            />
    <TextView
            android:id="@+id/lbl_blocksize_pre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@color/label_bgcolor"
            android:labelFor="@id/text_blocksize"
            android:paddingStart="3dp"
            android:paddingEnd="3dp"
            android:text="@string/lbl_blocksize_pre"
            android:textColor="@color/border_color"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/divider03"
            app:layout_constraintStart_toStartOf="parent"
            />

    <EditText
            android:id="@+id/text_blocksize"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/background_with_border"
            android:defaultFocusHighlightEnabled="true"
            android:gravity="center_horizontal"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/divider03"
            app:layout_constraintStart_toEndOf="@+id/lbl_blocksize_pre"
            />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/label_bgcolor"
            android:paddingStart="3dp"
            android:paddingEnd="3dp"
            android:text="@string/lbl_blocksize_post"
            android:textColor="@color/border_color"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/divider03"
            app:layout_constraintStart_toEndOf="@+id/text_blocksize"
            />
    <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_use_blocks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/lbl_on_off"
            app:layout_constraintTop_toBottomOf="@+id/divider03"
            app:layout_constraintEnd_toEndOf="parent"
            />
    <View
            android:id="@+id/divider04"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintTop_toBottomOf="@+id/sw_use_blocks"
            app:layout_constraintStart_toStartOf="parent"
            />
    <TextView
            android:id="@+id/lbl_volgorde"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@color/label_bgcolor"
            android:paddingStart="3dp"
            android:paddingEnd="3dp"
            android:text="@string/lbl_sort"
            android:textColor="@color/border_color"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider04"
            />
    <TextView
            android:id="@+id/lbl_flash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@color/label_bgcolor"
            android:paddingStart="3dp"
            android:paddingEnd="3dp"
            android:text="@string/lbl_flash"
            android:textColor="@color/border_color"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2"
            />
    <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_index"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:tag="index"
            android:text="@string/lbl_index"
            app:layout_constraintTop_toBottomOf="@+id/divider04"
            app:layout_constraintEnd_toEndOf="parent"
            />
    <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_alfa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:tag="alfa"
            android:text="@string/lbl_alphabetical"
            app:layout_constraintTop_toBottomOf="@+id/sw_index"
            app:layout_constraintEnd_toEndOf="parent"
            />
    <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_random"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:tag="random"
            android:text="@string/lbl_random"
            app:layout_constraintTop_toBottomOf="@+id/sw_alfa"
            app:layout_constraintEnd_toEndOf="parent"
            />
    <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:tag="desc"
            android:text="@string/lbl_descending"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/sw_random"
            />
    <View
            android:id="@+id/divider05"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintTop_toBottomOf="@+id/sw_random"
            app:layout_constraintStart_toStartOf="parent"
            />
    <TextView
            android:id="@+id/lbl_threshold_pre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@color/label_bgcolor"
            android:labelFor="@id/text_threshold"
            android:paddingStart="3dp"
            android:paddingEnd="3dp"
            android:text="@string/lbl_threshold_pre"
            android:textColor="@color/border_color"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/divider05"
            app:layout_constraintStart_toStartOf="parent"
            />
    <EditText
            android:id="@+id/text_threshold"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/background_with_border"
            android:gravity="center_horizontal"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/divider05"
            app:layout_constraintStart_toEndOf="@+id/lbl_threshold_pre"
            />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/label_bgcolor"
            android:paddingStart="3dp"
            android:paddingEnd="3dp"
            android:text="@string/lbl_threshold_post"
            android:textColor="@color/border_color"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/divider05"
            app:layout_constraintStart_toEndOf="@+id/text_threshold"
            />
    <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_hide_jumpers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:tag="hide"
            android:text="@string/lbl_hidejumpers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider05"
            />
    <Button
            android:id="@+id/btn_select"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btn_nav_height"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/btn_caption_select"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
    <Button
            android:id="@+id/btn_default"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btn_nav_height"
            android:layout_marginBottom="16dp"
            android:text="@string/btn_caption_default"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_cancel"
            />
    <Button
            android:id="@+id/btn_save_as_default"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btn_nav_height"
            android:layout_marginBottom="16dp"
            android:text="@string/btn_caption_save_default"
            android:textAllCaps="false"
            android:textColor="@color/blue_text_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_default"
            app:layout_constraintStart_toEndOf="@id/btn_select"
            />
    <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btn_nav_height"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/btn_caption_cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
    <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintTop_toBottomOf="@+id/sw_hide_jumpers"
            tools:layout_editor_absoluteX="-158dp"
            />
    <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintTop_toBottomOf="@+id/sw_flashed"
            />
</androidx.constraintlayout.widget.ConstraintLayout>

