<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
    <TextView
            android:id="@+id/lbl_wordgroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/lst_theme"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/lbl_themelist"
            android:textAlignment="center"
            />
    <TextView
            android:id="@+id/lbl_wordtype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@id/lst_wordtype"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/lbl_wordtypelist"
            android:textAlignment="center"
            />
    <ListView
            android:id="@+id/lst_theme"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toBottomOf="@id/lbl_wordgroup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_select"
            app:layout_constraintEnd_toStartOf="@id/lst_wordtype"
            android:layout_marginStart="4dp"
            android:background="@drawable/background_with_border"
            android:choiceMode="singleChoice"
            android:scrollbars="vertical"
            />
    <ListView
            android:id="@+id/lst_wordtype"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toBottomOf="@id/lbl_wordtype"
            app:layout_constraintStart_toEndOf="@+id/lst_theme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_select"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/background_with_border"
            android:choiceMode="singleChoice"
            android:scrollbars="vertical"
            />
    <Button
            android:id="@+id/btn_select"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btn_nav_height"
            android:layout_marginStart="8dp"
            android:text="@string/btn_caption_select"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
    <Button
            android:id="@+id/btn_default"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btn_nav_height"
            android:layout_weight="1"
            android:text="@string/btn_caption_clear"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_cancel"
            app:layout_constraintStart_toEndOf="@id/btn_select"
            />
    <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btn_nav_height"
            android:layout_marginEnd="8dp"
            android:text="@string/btn_caption_cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
</androidx.constraintlayout.widget.ConstraintLayout>